# HSE-Object-oriented-programming

./: .gitignore  README.md
practice/: CMakeLists.txt  main.cpp
practice/include/: bw_matrix.h  matrix.h  rgb_matrix.h
practice/src/: bw_matrix.cpp  matrix.cpp  rgb_matrix.cpp
